--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1,2 +1,9 @@
-﻿body {
+﻿.richcc-datepicker {
+    width: 100%;
+    height: 100%;
+
+    table {
+        width: 100%;
+        height: 100%;
+    }
 }
