--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -252,8 +252,8 @@
                             border-radius: 50%;
                             margin: 5px 0 0 0;
 
-                            &.cc-info.cc-active,
-                            &.cc-info.cc-active.cc-current {
+                            &.cc-info,
+                            &.cc-info.cc-current {
                                 border-radius: 50%;
                                 background: #0073c6;
                                 color: #fff;
