--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -196,11 +196,26 @@
 
                             .mark {
                                 position: absolute;
-                                width: 100%;
                                 height: 15px;
+                                width: 0;
                                 text-align: left;
                                 padding: 0;
-                                line-height:14px;
+                                line-height: 14px;
+                                opacity: 0;
+                                -moz-transition: all 300ms linear 300ms, width 300ms linear;
+                                -o-transition: all 300ms linear 300ms, width 300ms linear;
+                                -webkit-transition: all 300ms linear 300ms, width 300ms linear;
+                                transition: all 300ms linear 300ms, width 300ms linear;
+
+                                @for $i from 1 through 120 {
+                                    &.step-#{$i} {
+                                        opacity: 1;
+                                        -moz-transition-delay: (#{$i * 300}ms);
+                                        -o-transition-delay: (#{$i * 300}ms);
+                                        -webkit-transition-delay: (#{$i * 300}ms);
+                                        transition-delay: (#{$i * 300}ms);
+                                    }
+                                }
 
                                 .text {
                                     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -223,6 +238,7 @@
                                     bottom: 0;
                                     background: none;
                                     width: 30px;
+                                    opacity: 1;
 
                                     .icon-container {
                                         height: 15px;
@@ -235,7 +251,7 @@
                                             left: 0;
                                             background-size: 50%;
                                             background-position-y: -48px;
-                                            background-position-x:5px;
+                                            background-position-x: 5px;
                                         }
                                     }
                                 }
@@ -252,13 +268,15 @@
                             margin: 5px 0 0 0;
 
                             &.cc-info,
-                            &.cc-info.cc-current {
+                            &.cc-info.cc-current,
+                            &.cc-info.cc-muted {
                                 border-radius: 50%;
                                 background: #0073c6;
                                 color: #fff;
                             }
 
-                            &.cc-current {
+                            &.cc-current,
+                            &.cc-current.cc-muted {
                                 border-radius: 50%;
                                 background: #fff;
                                 border: 1px solid #0073c6;
