--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -185,6 +185,7 @@
                         -o-transition: all 0.2s linear;
                         -webkit-transition: all 0.2s linear;
                         transition: all 0.2s linear;
+                        height: 16.67%;
 
                         &:hover, &:active, &:focus {
                             /*background: rgba(0,115,198, 0.05);*/
@@ -202,18 +203,127 @@
                                 padding: 0;
                                 line-height: 14px;
                                 opacity: 0;
+                                background:#fcfcfc;
                                 -moz-transition: all 300ms linear 300ms, width 300ms linear;
                                 -o-transition: all 300ms linear 300ms, width 300ms linear;
                                 -webkit-transition: all 300ms linear 300ms, width 300ms linear;
                                 transition: all 300ms linear 300ms, width 300ms linear;
 
+                                .mark-stripe {
+                                    width:0;
+                                    white-space: nowrap;
+                                    height: 15px;
+                                    position: absolute;
+                                    display: block;
+                                    -moz-animation-name: richcc-width-animation;
+                                    -o-animation-name: richcc-width-animation;
+                                    -webkit-animation-name: richcc-width-animation;
+                                    animation-name: richcc-width-animation;
+                                    -moz-animation-duration: 400ms;
+                                    -o-animation-duration: 400ms;
+                                    -webkit-animation-duration: 400ms;
+                                    animation-duration: 400ms;
+                                    -moz-animation-iteration-count: 1;
+                                    -o-animation-iteration-count: 1;
+                                    -webkit-animation-iteration-count: 1;
+                                    animation-iteration-count: 1;
+                                    -moz-animation-timing-function: ease-out;
+                                    -o-animation-timing-function: ease-out;
+                                    -webkit-animation-timing-function: ease-out;
+                                    animation-timing-function: ease-out;
+                                    -moz-animation-fill-mode: forwards;
+                                    -o-animation-fill-mode: forwards;
+                                    -webkit-animation-fill-mode: forwards;
+                                    animation-fill-mode: forwards;
+                                }
+
+                                @-webkit-keyframes richcc-width-animation {
+                                    0% {
+                                        width: 0;
+                                    }
+
+                                    33% {
+                                        width: 33%;
+                                    }
+
+                                    66% {
+                                        width: 66%;
+                                    }
+
+                                    100% {
+                                        width: 100%;
+                                    }
+                                }
+
+                                @-moz-keyframes richcc-width-animation {
+                                    0% {
+                                        width: 0;
+                                    }
+
+                                    33% {
+                                        width: 33%;
+                                    }
+
+                                    66% {
+                                        width: 66%;
+                                    }
+
+                                    100% {
+                                        width: 100%;
+                                    }
+                                }
+
+                                @-o-keyframes richcc-width-animation {
+                                    0% {
+                                        width: 0;
+                                    }
+
+                                    33% {
+                                        width: 33%;
+                                    }
+
+                                    66% {
+                                        width: 66%;
+                                    }
+
+                                    100% {
+                                        width: 100%;
+                                    }
+                                }
+
+                                @keyframes NAME-YOUR-ANIMATION {
+                                    0% {
+                                        width: 0;
+                                    }
+
+                                    33% {
+                                        width: 33%;
+                                    }
+
+                                    66% {
+                                        width: 66%;
+                                    }
+
+                                    100% {
+                                        width: 100%;
+                                    }
+                                }
+
+
                                 @for $i from 1 through 120 {
                                     &.step-#{$i} {
                                         opacity: 1;
-                                        -moz-transition-delay: (#{$i * 300}ms);
-                                        -o-transition-delay: (#{$i * 300}ms);
-                                        -webkit-transition-delay: (#{$i * 300}ms);
-                                        transition-delay: (#{$i * 300}ms);
+                                        -moz-transition-delay: (#{$i * 200}ms);
+                                        -o-transition-delay: (#{$i * 200}ms);
+                                        -webkit-transition-delay: (#{$i * 200}ms);
+                                        transition-delay: (#{$i * 200}ms);
+
+                                        .mark-stripe {
+                                            -moz-animation-delay: (#{$i * 200}ms);
+                                            -o-animation-delay: (#{$i * 200}ms);
+                                            -webkit-animation-delay: (#{$i * 200}ms);
+                                            animation-delay: (#{$i * 200}ms);
+                                        }
                                     }
                                 }
 
