--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1,4 +1,169 @@
-﻿.richcc-datepicker {
+﻿.richcc-popup-container {
+    height: 300px;
+    width: 330px;
+    max-width: none;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    background: #fff;
+    margin-top: 0;
+
+    &.bottom {
+        margin-top: 0;
+
+        & > .arrow::after {
+            border-bottom-color: #0073c6;
+        }
+    }
+
+    &.top {
+        margin-top: 0;
+
+        & > .arrow::after {
+            border-top-color: #0073c6;
+        }
+    }
+
+    &.bottom {
+        box-shadow: 0 10px 15px rgba(0,0,0,0.2);
+    }
+
+    &.top {
+        box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
+
+    &.top-left,
+    &.bottom-left {
+
+        & > .arrow {
+            margin-left: 15px !important;
+        }
+    }
+
+    &.top-right,
+    &.bottom-right {
+
+        & > .arrow {
+            margin-right: 15px !important;
+        }
+    }
+
+    .popover-inner {
+        width: 100%;
+        height: 100%;
+    }
+
+    .popover-content {
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        border-top: 3px solid #0073c6;
+    }
+
+    .richcc-day-popup {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+
+        .event-container {
+            height: calc(100% - 48px);
+            width: 100%;
+
+            .event-container-label {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: small;
+                color: rgba(0, 0, 0, 0.50);
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                line-height: 36px;
+                width: 100%;
+                padding: 0 15px;
+            }
+
+            .event-details-container {
+                height: calc(100% - 36px);
+                width: 100%;
+                padding-top: 5px;
+                overflow-y: auto;
+                -ms-overflow-style: -ms-autohiding-scrollbar;
+
+                .event-title-holder {
+                    border-left: 8px solid #f6f6f6;
+                    width: 100%;
+                    padding-left: 10px;
+                    display: inline-block;
+
+                    .event-title {
+                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                        font-size: small;
+                        color: rgba(0, 0, 0, 0.50);
+                        text-transform: uppercase;
+                        font-weight: 600;
+                    }
+
+                    .event-subject {
+                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                        font-size: small;
+                        color: rgba(0, 0, 0, 0.50);
+                        font-weight: 400;
+                    }
+
+                    .event-time {
+                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                        font-size: small;
+                        color: rgba(0, 0, 0, 0.50);
+                        text-transform: uppercase;
+                        font-weight: 600;
+                    }
+                }
+            }
+
+            .event-detail {
+                height: auto;
+                min-height: 75px;
+                padding: 15px;
+                border-bottom: 1px solid #F0F0F0;
+
+                &:first-child {
+                    padding-top: 0;
+                }
+            }
+        }
+
+        .event-action-container {
+            height: 48px;
+            background: #0073c6;
+            position: relative;
+
+            .event-action {
+                width: 49%;
+                display: inline-block;
+                line-height: 48px;
+                text-align: center;
+                text-transform: uppercase;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: small;
+                letter-spacing: 1px;
+                box-shadow: none;
+                color: #fff;
+                background: transparent;
+                border: none;
+            }
+
+            .event-separator {
+                height: 24px;
+                position: absolute;
+                top: 12px;
+                left: 50%;
+                width: 1px;
+                background: #D0D0D0;
+            }
+        }
+    }
+}
+
+.richcc-datepicker {
     width: 100%;
     height: 100%;
     padding: 0 15px;
