--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -170,6 +170,10 @@
     background: #fff;
     margin: 0;
 
+    &[light=true] {
+        padding: 0 8px;
+    }
+
     .icon-container {
         outline: none;
         border: 0;
@@ -187,34 +191,23 @@
             color: #fff;
         }
 
-        &:hover {
+        &:not(.disabled):hover,
+        &:not([disabled]):hover {
             background: rgba(0,0,0, 0.05);
         }
 
-        &.disabled {
+        &.disabled,
+        &[disabled] {
             background: transparent;
-            color: #fff;
-            opacity: 0.33;
+            opacity: 0.60;
             filter: alpha(opacity = 33);
             cursor: none;
-        }
-        /*&:not(.disabled) {
-        &:hover, &:active, &:focus {
-            background: transparent;
-        }
-    }
 
-    &:not(.active) {
-        &:hover, &:active, &:focus {
-            background: transparent;
+            &:hover {
+                background: transparent;
+            }
         }
-    }
 
-    &.active {
-        &:hover, &:active, &:focus {
-            background: transparent;
-        }
-    }*/
     }
 
     .icon {
@@ -266,10 +259,380 @@
 
     table {
         width: 100%;
-        height: 100%;
     }
 
     .richcc-daypicker {
+        height: 100%;
+
+        &.uib-monthpicker {
+            thead {
+                tr {
+                    th {
+                        width: 16%;
+
+                        &.w48 {
+                            width: 4%;
+                        }
+                    }
+                }
+            }
+
+            tbody {
+                tr {
+                    td {
+                        width: 16%;
+
+                        &.w48 {
+                            width: 4%;
+                        }
+                    }
+                }
+            }
+
+            .richcc-monthviewer {
+                thead {
+                    height: 36px;
+
+                    tr {
+                        height: 36px;
+
+                        &.header-action-holder {
+                            th {
+                                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                font-weight: 600;
+                                text-transform: uppercase;
+                                padding: 0;
+                                text-align: center;
+                                margin: 0;
+                                cursor: pointer;
+                                height: 36px;
+
+                                &:hover {
+                                    background: rgba(0,0,0, 0.05);
+                                }
+                            }
+                        }
+                    }
+                }
+
+                tbody {
+                    tr {
+                        &.richcc-row {
+                            height: 22px;
+                            border: none;
+
+                            td {
+                                &.richcc-td {
+                                    height: 19px;
+                                    vertical-align: middle;
+
+                                    .marker {
+                                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                        font-weight: 400;
+                                        color: rgba(0,0,0,0.40);
+                                        text-transform: uppercase;
+                                        padding: 0;
+                                        text-align: center;
+                                        margin: 0;
+                                        cursor: pointer;
+                                    }
+
+                                    .richcc-mv-box {
+                                        width: 17px;
+                                        height: 18px;
+                                        display: block;
+                                        margin: calc(0.5 * (100% - 30px)) auto;
+                                        background-color: #f8f8f8;
+                                        opacity: 1;
+                                        -moz-animation-duration: 800ms;
+                                        -o-animation-duration: 800ms;
+                                        -webkit-animation-duration: 800ms;
+                                        animation-duration: 800ms;
+                                        -moz-animation-iteration-count: 1;
+                                        -o-animation-iteration-count: 1;
+                                        -webkit-animation-iteration-count: 1;
+                                        animation-iteration-count: 1;
+                                        -moz-animation-timing-function: ease-in;
+                                        -o-animation-timing-function: ease-in;
+                                        -webkit-animation-timing-function: ease-in;
+                                        animation-timing-function: ease-in;
+                                        -moz-animation-fill-mode: forwards;
+                                        -o-animation-fill-mode: forwards;
+                                        -webkit-animation-fill-mode: forwards;
+                                        animation-fill-mode: forwards;
+                                        -moz-animation-delay: 0;
+                                        -o-animation-delay: 0;
+                                        -webkit-animation-delay: 0;
+                                        animation-delay: 0;
+
+                                        &[transparent='1'] {
+                                            -moz-animation-name: richcc-opacity33-animation;
+                                            -o-animation-name: richcc-opacity33-animation;
+                                            -webkit-animation-name: richcc-opacity33-animation;
+                                            animation-name: richcc-opacity33-animation;
+                                            opacity: 0;
+                                            background-color: #0073c6;
+                                        }
+
+                                        &[transparent='2'] {
+                                            -moz-animation-name: richcc-opacity67-animation;
+                                            -o-animation-name: richcc-opacity67-animation;
+                                            -webkit-animation-name: richcc-opacity67-animation;
+                                            animation-name: richcc-opacity67-animation;
+                                            opacity: 0;
+                                            background-color: #0073c6;
+                                        }
+
+                                        &.fullyOpaque {
+                                            -moz-animation-name: richcc-opacity100-animation;
+                                            -o-animation-name: richcc-opacity100-animation;
+                                            -webkit-animation-name: richcc-opacity100-animation;
+                                            animation-name: richcc-opacity100-animation;
+                                            opacity: 0;
+                                            background-color: #003860;
+                                        }
+
+                                        @-webkit-keyframes richcc-opacity33-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.15;
+                                            }
+
+                                            100% {
+                                                opacity: 0.15;
+                                            }
+                                        }
+
+                                        @-moz-keyframes richcc-opacity33-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.15;
+                                            }
+
+                                            100% {
+                                                opacity: 0.15;
+                                            }
+                                        }
+
+                                        @-o-keyframes richcc-opacity33-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.15;
+                                            }
+
+                                            100% {
+                                                opacity: 0.15;
+                                            }
+                                        }
+
+                                        @keyframes richcc-opacity33-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.15;
+                                            }
+
+                                            100% {
+                                                opacity: 0.15;
+                                            }
+                                        }
+
+                                        @-webkit-keyframes richcc-opacity67-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 0.50;
+                                            }
+                                        }
+
+                                        @-moz-keyframes richcc-opacity67-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 0.50;
+                                            }
+                                        }
+
+                                        @-o-keyframes richcc-opacity67-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 0.50;
+                                            }
+                                        }
+
+                                        @keyframes richcc-opacity67-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 0.50;
+                                            }
+                                        }
+
+                                        @-webkit-keyframes richcc-opacity100-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 1;
+                                            }
+                                        }
+
+                                        @-moz-keyframes richcc-opacity100-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 1;
+                                            }
+                                        }
+
+                                        @-o-keyframes richcc-opacity100-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 1;
+                                            }
+                                        }
+
+                                        @keyframes richcc-opacity100-animation {
+                                            0% {
+                                                opacity: 0;
+                                            }
+
+                                            33% {
+                                                opacity: 0.15;
+                                            }
+
+                                            66% {
+                                                opacity: 0.50;
+                                            }
+
+                                            100% {
+                                                opacity: 1;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        &.uib-yearpicker {
+            thead {
+                tr {
+                    th {
+                        width: 20%;
+                    }
+                }
+            }
+
+            tbody {
+                tr {
+                    td {
+                        width: 20%;
+                    }
+                }
+            }
+        }
 
         thead {
             tr {
@@ -460,7 +823,7 @@
                                     }
                                 }
 
-                                @keyframes NAME-YOUR-ANIMATION {
+                                @keyframes richcc-width-animation {
                                     0% {
                                         width: 0;
                                     }
@@ -605,13 +968,14 @@
                             height: 100%;
 
                             .mark {
+                                background: transparent;
 
                                 &.top {
                                     top: 15%;
                                 }
 
                                 &.bottom {
-                                    top: 45%;
+                                    top: 50%;
                                 }
 
                                 .mark-text-initial {
@@ -640,7 +1004,7 @@
                         }
 
                         &.richcc-light-lastdaymark {
-                            padding: 0 0 0 20px;
+                            padding: 0 0 0 10px;
                             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                             font-weight: 400;
                             text-transform: uppercase;
