--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -207,7 +207,6 @@
                 background: transparent;
             }
         }
-
     }
 
     .icon {
@@ -364,7 +363,7 @@
                                         -o-animation-delay: 0;
                                         -webkit-animation-delay: 0;
                                         animation-delay: 0;
-                                        transition:none;
+                                        transition: none;
 
                                         &[transparent='1'] {
                                             -moz-animation-name: richcc-opacity33-animation;
@@ -606,6 +605,81 @@
 
                                             100% {
                                                 opacity: 1;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .richcc-month-event-box-holder {
+                height: 30px;
+
+                .richcc-monthviewer {
+                    thead,
+                    thead tr,
+                    thead tr th {
+                        height: 0 !important;
+                    }
+
+                    tbody {
+                        tr.richcc-row {
+                            td.richcc-td {
+                                height: 30px;
+
+                                .richcc-month-eventbox {
+                                    width: 14.28%;
+                                    height: 30px;
+                                    padding: 0;
+                                    margin: 0;
+                                    display: inline-block;
+                                    vertical-align: middle;
+
+                                    .richcc-eventbox-content {
+                                        width: 100%;
+                                        display: block;
+                                        margin: 0 auto;
+                                        height: 100%;
+                                        background: #f6f6f6;
+                                        border-left: 1px solid #E0E0E0;
+                                        border-right: 1px solid #E0E0E0;
+                                        -moz-box-sizing: content-box;
+                                        -webkit-box-sizing: content-box;
+                                        box-sizing: content-box;
+
+
+                                        &.notInPresentMonth {
+                                            background: none;
+                                            border: none;
+                                        }
+
+                                        .markHolder {
+                                            width: 100%;
+                                            height: 100%;
+                                            display: block;
+
+                                            .mark {
+                                                background: none;
+
+                                                .mark-text-initial {
+                                                    font-size: 12px;
+                                                    position: relative;
+                                                    left: 4px;
+                                                    width: 12px;
+                                                }
+
+                                                .mark-stripe {
+                                                    &.light {
+                                                        height: 4px;
+                                                        border-radius: 2px;
+                                                        position: absolute;
+                                                        top: 5px;
+                                                        margin-left: 15px;
+                                                    }
+                                                }
                                             }
                                         }
                                     }
