Month Event Pop Up fix

--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -654,6 +654,7 @@
                                         &.notInPresentMonth {
                                             background: none;
                                             border: none;
+                                            cursor: default;
                                         }
 
                                         .markHolder {
