--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -698,6 +698,24 @@
                     }
                 }
             }
+
+            .eventMonthMarker,
+            .eventDayMarker {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 600;
+                text-transform: uppercase;
+                padding: 0;
+                text-align: center;
+                font-size: small;
+                color: #909090;
+            }
+
+            .richcc-month-eventbox {
+                &.eventDayMarker {
+                    width: 14.28%;
+                    display: inline-block;
+                }
+            }
         }
 
         &.uib-yearpicker {
