Change For Column Spans

--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -710,6 +710,14 @@
                 color: #303030;
             }
 
+            .eventMonthMarker {
+                cursor: pointer;
+
+                &:hover {
+                    background: #f0f0f0;
+                }
+            }
+
             .richcc-month-eventbox {
                 &.eventDayMarker {
                     width: 14.28%;
@@ -731,6 +739,52 @@
                 tr {
                     td {
                         width: 20%;
+
+                        &.uib-year {
+                            button {
+                                height: 100px;
+                                width: 100px;
+                                border-radius: 50%;
+                                min-width: auto;
+                                border: none;
+                                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                font-weight: 100;
+                                font-size: x-large;
+                                -moz-transition: all 0.3s linear 0s;
+                                -o-transition: all 0.3s linear 0s;
+                                -webkit-transition: all 0.3s linear 0s;
+                                transition: all 0.3s linear 0s;
+
+                                &.btn-info {
+                                    border: 1px solid #0073c6;
+                                    background: none;
+                                    color: #0073c6;
+
+                                    &.active {
+                                        background: #0073c6;
+                                        color: #fff;
+
+                                        .text-info {
+                                            color: #fff;
+                                        }
+                                    }
+                                }
+
+                                &.active {
+                                    background: #0073c6;
+                                    color: #fff;
+                                }
+
+                                &:hover {
+                                    border: none;
+                                    background: #f0f0f0;
+                                }
+
+                                &:focus {
+                                    outline: 1px dotted rgba(0,0,0, 0.20);
+                                }
+                            }
+                        }
                     }
                 }
             }
