--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1113,7 +1113,7 @@
                         &.dayHolder {
                             width: 20px;
                             height: 20px;
-                            background: #fff;
+                            background: transparent;
                             border-radius: 50%;
                             margin: 5px 0 0 0;
 
