1. Callback for 'move' - moveModeCallback 2. Callback for 'move' - toggleModeCallBack 3. Config  for  hiding nav controls - hideCalNav

--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -847,6 +847,12 @@
                         margin: 0 auto;
                         height: 36px;
 
+                        &.calNavHidden {
+                            .labelHolder {
+                                width: 100%;
+                            }
+                        }
+
                         .icon {
                             top: 5px;
                             left: 7px;
