--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -976,6 +976,15 @@
                                     -o-animation-fill-mode: forwards;
                                     -webkit-animation-fill-mode: forwards;
                                     animation-fill-mode: forwards;
+
+                                    &.highlightBorder {
+                                        border-width: 2px;
+                                        border-style: dashed;
+                                        border-color: #000000;
+                                        -moz-box-sizing: content-box;
+                                        -webkit-box-sizing: content-box;
+                                        box-sizing: content-box;
+                                    }
                                 }
 
                                 @-webkit-keyframes richcc-width-animation {
