--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -944,7 +944,7 @@
                                 padding: 0;
                                 line-height: 14px;
                                 opacity: 0;
-                                background: #fcfcfc;
+                                background: transparent;
                                 -moz-transition: all 300ms linear 300ms, width 300ms linear;
                                 -o-transition: all 300ms linear 300ms, width 300ms linear;
                                 -webkit-transition: all 300ms linear 300ms, width 300ms linear;
@@ -976,14 +976,29 @@
                                     -o-animation-fill-mode: forwards;
                                     -webkit-animation-fill-mode: forwards;
                                     animation-fill-mode: forwards;
+                                    border: 2px dashed transparent;
+                                    -moz-box-sizing: content-box;
+                                    -webkit-box-sizing: content-box;
+                                    box-sizing: content-box;
 
                                     &.highlightBorder {
-                                        border-width: 2px;
-                                        border-style: dashed;
                                         border-color: #000000;
-                                        -moz-box-sizing: content-box;
-                                        -webkit-box-sizing: content-box;
-                                        box-sizing: content-box;
+
+                                        .mark-stripe-color {
+                                            width: calc(100% - 2px);
+                                            height: calc(100% - 2px);
+                                            position: absolute;
+                                            top: 1px;
+                                            left: 1px;
+                                        }
+                                    }
+
+                                    .mark-stripe-color {
+                                        width: 100%;
+                                        height: calc(100% - 2px);
+                                        position: absolute;
+                                        top: 1px;
+                                        left: 0;
                                     }
                                 }
 
@@ -1092,6 +1107,8 @@
                                     padding: 0 5px;
                                     margin: 0;
                                     font-size: 12px;
+                                    position: relative;
+                                    top: -1px;
                                 }
 
                                 &.top {
@@ -1099,7 +1116,7 @@
                                 }
 
                                 &.bottom {
-                                    top: 25px;
+                                    top: 28px;
                                 }
 
                                 &.morePresent {
