--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -82,7 +82,14 @@
         height: auto;
         min-height: 75px;
         padding: 15px;
-        border-bottom: 1px solid #F0F0F0; }
+        border-bottom: 1px solid #F0F0F0;
+        cursor: pointer; }
+        .richcc-popup-container .richcc-day-popup .event-container .event-detail:active {
+          -moz-transform: scale(0.98, 0.98);
+          -ms-transform: scale(0.98, 0.98);
+          -o-transform: scale(0.98, 0.98);
+          -webkit-transform: scale(0.98, 0.98);
+          transform: scale(0.98, 0.98); }
         .richcc-popup-container .richcc-day-popup .event-container .event-detail:first-child {
           padding-top: 0; }
     .richcc-popup-container .richcc-day-popup .event-action-container {
