--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -153,7 +153,7 @@
   border: none;
   position: relative; }
   .richcc-datepicker.fixedWidth {
-    width: 1367px;
+    width: 100%;
     height: 595px;
     display: block;
     margin: 0 auto;
@@ -494,6 +494,8 @@
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer thead tr,
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer thead tr th {
         height: 0 !important; }
+      .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row.noInitials td.richcc-td .richcc-month-eventbox .markHolder .mark .mark-stripe.light {
+        margin-left: 5px !important; }
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td {
         height: 30px;
         width: 14.27%;
